# geoarrow-c-geos

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-and-test.yml
src/geoarrow_geos/: geoarrow_geos.c  geoarrow_geos.cc  geoarrow_geos.h  geoarrow_geos.hpp  geoarrow_geos_test.cc
